# Security-Mobile

./: .gitignore  README.md  pyproject.toml
frida_scripts/: auth_intercept.js  crypto_intercept.js  root_bypass.js  socket_monitor.js  ssl_bypass.js
signatures/: crypto_misuse.yaml  hardcoded_secrets.yaml
src/sentinel/: __init__.py  __main__.py
src/sentinel/agents/: api_fuzzer_agent.py  apk_agent.py  base.py  context.py  dast_agent.py  device_agent.py  exploit_agent.py  frida_agent.py  knowledge_agent.py  orchestrator.py  planner.py  registry.py  report_agent.py  sast_agent.py  traffic_agent.py
src/sentinel/analysis/: components.py  deeplinks.py  manifest.py  permissions.py  secrets.py
src/sentinel/cli/: commands.py
src/sentinel/core/: config.py  engine.py  events.py  exceptions.py  state.py
src/sentinel/dast/: auth_tester.py  fuzzer.py  idor_tester.py  mutator.py  schema_infer.py
src/sentinel/llm/: claude.py  local.py  openai_provider.py  prompts.py  provider.py  router.py
src/sentinel/memory/: graph.py  store.py
src/sentinel/models/: agent.py  apk.py  device.py  engagement.py  event.py  finding.py  report.py
src/sentinel/reporting/: generator.py
src/sentinel/runtime/: auth_hook.py  crypto_hook.py  hook_engine.py  script_gen.py  socket_hook.py  ssl_bypass.py
src/sentinel/tools/: adb_tool.py  apktool_tool.py  base.py  frida_tool.py  jadx_tool.py  mitmproxy_tool.py  nuclei_tool.py  sandbox.py
src/sentinel/utils/: fs.py  hash.py  logger.py
test_target_jadx2/sources/A/: A.java  AbstractC0685a.java  AbstractC0694e0.java  AbstractC0700h0.java  AbstractC0707l.java  AbstractC0708l0.java  AbstractC0710m0.java  AbstractC0715s.java  AbstractC0722z.java  AbstractC1333b.java  AbstractC1334c.java  B.java  C.java  D.java  (+47 more)
tests/: conftest.py
tests/unit/: test_agents.py  test_analysis.py  test_events.py  test_graph.py  test_models.py
(+13656 files in other folders)
