[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel"
version = "0.1.0"
description = "AI-powered agentic mobile application penetration testing platform"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "SENTINEL Team" }]
keywords = ["security", "mobile", "pentesting", "android", "ai", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn",
    "anthropic>=0.30",
    "openai>=1.0",
    "androguard>=3.4",
    "lxml>=4.9",
    "aiosqlite>=0.19",
    "sqlalchemy[asyncio]>=2.0",
    "networkx>=3.0",
    "httpx>=0.25",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
tui = ["textual>=0.40"]
runtime = ["frida-tools>=12.0", "frida>=16.0"]
proxy = ["mitmproxy>=10.0"]
neo4j = ["neo4j>=5.0"]
redis = ["redis>=5.0", "celery>=5.0"]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "ruff", "mypy"]
all = ["sentinel[tui,runtime,proxy,neo4j,redis,dev]"]

[project.scripts]
sentinel = "sentinel.cli.commands:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests requiring external tools",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
